# nextbus-tui

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  index.html  install.ps1  install.sh
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  deploy-proxy.yml  release.yml
assets/: routes.toml  stops.toml
assets/atlas/: README.md  atlas.ja.atlas  atlas.ms.atlas  atlas.ta.atlas  atlas.vi.atlas  atlas.zh-CN.atlas  atlas.zh-TW.atlas  multilang.atlas  required_chars.en.txt  required_chars.ja.txt  required_chars.ms.txt  required_chars.ta.txt  required_chars.txt  required_chars.vi.txt  required_chars.zh-CN.txt  required_chars.zh-TW.txt
assets/i18n/: config.toml
assets/i18n/en/: main.ftl
assets/i18n/ja/: main.ftl
assets/i18n/ms/: main.ftl
assets/i18n/ta/: main.ftl
assets/i18n/vi/: main.ftl
assets/i18n/zh-CN/: main.ftl
assets/i18n/zh-TW/: main.ftl
assets/themes/: catppuccin_latte.toml  catpuccin_mocha.toml  dracula.toml  github_light.toml  gruvbox_dark.toml  gruvbox_light.toml  nord.toml  nord_light.toml  solarized_dark.toml  solarized_light.toml  tokyonight.toml  tokyonight_day.toml
proxy_api/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
proxy_api/src/: index.ts
scripts/: atlas-workflow.sh  check-native-no-wasm.sh  download-noto-fonts.sh  install-hooks.sh
src/: api.rs  app.rs  config.rs  i18n.rs  layout.rs  main.rs  message.rs  models.rs  sg_api.rs  theme.rs  time.rs  ui.rs  web.rs  web_atlas.rs
src/app/: favourites.rs  fetch.rs  input.rs  jump.rs  list.rs  mod.rs  mouse.rs  nav.rs  overlay.rs  settings.rs  sg_fetch.rs  sg_nav.rs  tick.rs
src/ui/: alert_banner.rs  detail.rs  footer.rs  helpers.rs  lang_picker.rs  mod.rs  search.rs  settings.rs  sg_detail.rs  sg_stop_list.rs  stop_list.rs  theme_picker.rs  title.rs
