[package]
name = "nextbus-tui"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level     = "z"     # optimise for size, not speed
lto           = "fat"   # whole-program LTO — removes more dead code across crates
codegen-units = 1       # single CGU lets the optimiser see the whole program at once
panic         = "abort" # drop panic-unwinding machinery (~10-15 % of binary)
strip         = true    # strip all symbols from the final binary

[dependencies]
dotenvy = "0.15"
include_dir = "0.7"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = "2"
fluent = "0.16"
unic-langid = "0.9"
unicode-width = "0.2"
chrono = "0.4"
dirs = "5"
