[package]
name = "nextbus-tui"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level     = "z"     # optimise for size, not speed
lto           = "fat"   # whole-program LTO — removes more dead code across crates
codegen-units = 1       # single CGU lets the optimiser see the whole program at once
panic         = "unwind" # drop panic-unwinding machinery (~10-15 % of binary)
strip         = true    # strip all symbols from the final binary

[dependencies]
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
fluent = "0.16"
unic-langid = "0.9"
unicode-width = "0.2"
unicode-segmentation = "1"
chrono = "0.4"
beamterm-data = "0.7"
fontdue = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
dotenvy = "0.15"
crossterm = "0.28"
ureq = "2"
dirs = "5"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratatui = { version = "0.29", default-features = false }
ratzilla = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "Storage", "Response", "WheelEvent", "TouchEvent", "Touch", "TouchList"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
